--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "Animation"
     ],
     "category": "Unity",
-    "dependencies": {
+    "gitDependencies": {
         "com.alelievr.node-graph-processor" : "https://github.com/alelievr/NodeGraphProcessor.git#upm"
     }
 }
