--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     ],
     "category": "Unity",
     "gitDependencies": {
-        "com.alelievr.node-graph-processor" : "https://github.com/alelievr/NodeGraphProcessor.git#upm"
+        "com.alelievr.node-graph-processor" : "https://github.com/alelievr/NodeGraphProcessor.git#upm-v1.3.0"
     }
 }
