--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "category": "Unity",
     "gitDependencies": {
         "com.alelievr.node-graph-processor" : "https://github.com/alelievr/NodeGraphProcessor.git#1.3.0"
-    }
+    },
+	"dependencies": {
+		"com.alelievr.node-graph-processor" : "1.3.0"
+	}
 }
