--- a/Runtime/com.orizongroup.animation-system.Runtime.asmdef
+++ b/Runtime/com.orizongroup.animation-system.Runtime.asmdef
@@ -1,11 +1,11 @@
 {
-    "name": "AnimationSystem",
+    "name": "Core",
     "rootNamespace": "",
     "references": [
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
-        "GUID:16fdc78be10816f4d8996d515bc52dbb",
         "GUID:ca937d03ee5dd4d699091438dc0f3ae6",
-        "GUID:a432eb0a70c5c4a37ab50d59671586f8"
+        "GUID:a432eb0a70c5c4a37ab50d59671586f8",
+        "GUID:b85a9b696dea92b4f9d0efe8b3f0e5b7"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
