--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     ],
     "category": "Unity",
     "gitDependencies": {
-        "com.alelievr.node-graph-processor" : "https://github.com/alelievr/NodeGraphProcessor.git?path=#1.3.0"
+        "com.alelievr.node-graph-processor" : "https://github.com/alelievr/NodeGraphProcessor.git?path=#1.3.0",
+        "com.demigiant.dotween" : "https://github.com/yoshida190/dotween.git#upm"
     }
 }
